--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ joblib==1.2.0
 jupyter_client==8.3.1
 jupyter_core==5.3.2
 kiwisolver==1.4.4
+lxml==4.9.3
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mkl-fft==1.3.8
@@ -49,6 +50,7 @@ pyparsing==3.0.9
 PyQt5==5.15.7
 PyQt5-sip==12.11.0
 python-dateutil==2.8.2
+python-pptx==0.6.22
 pytz==2023.3.post1
 pywin32==305.1
 PyYAML==6.0.1
@@ -70,4 +72,5 @@ typing_extensions==4.8.0
 tzdata==2023.3
 wcwidth==0.2.8
 wheel==0.41.2
+XlsxWriter==3.1.1
 zipp==3.17.0
